--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-gitignore_content = """# Python dosyaları
+# Python dosyaları
 *.pyc
 __pycache__/
 
@@ -21,9 +21,3 @@ env/
 
 # MacOS
 .DS_Store
-"""
-
-with open('.gitignore', 'w', encoding='utf-8') as f:
-    f.write(gitignore_content)
-
-print("'.gitignore' dosyası başarıyla oluşturuldu!")
